# fitness_tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: FT_App_pytest.yml
ft_app/: __init__.py  about.py  app.py  auth.py  blog.py  bw_tracker.py  definitions.py  exercises.py  forms.py  models.py  personal_trainers.py  training_planner.py
ft_app/dbc/: database.py  queries.py
ft_app/instance/: test.db
ft_app/models/: models.py
ft_app/models/bodyweight_tracker/: body_weight_record.py  plot_weight_trend.py
ft_app/models/dbc/: database.py  queries.py
ft_app/static/css/: blog_index.css  bw_tracker.css  exercises_index.css  login.css  main.css
ft_app/templates/: base.html  index.html
ft_app/templates/about/: index.html
ft_app/templates/auth/: login.html  register.html  user_panel.html
ft_app/templates/blog/: create.html  create_update.html  index.html  update.html
ft_app/templates/bw_tracker/: index.html  update.html
ft_app/templates/exercises/: index.html
ft_app/templates/personal_trainers/: index.html
ft_app/templates/training_planner/: create_modify.html  create_plan.html  create_unit.html  index.html  modify.html
input/: weight_input.csv
instance/: fitness_tracker.sqlite
source/: __init__.py  app.py
source/bodyweight_tracker/: bw_tracker.py  plot_weight_trend.py
source/exercises/: exercise.py
tests/: conftest.py  test_auth.py  test_blog.py  test_bw_tracker.py  test_factory.py  test_forms.py  test_queries.py
tests/test_bodyweight_tracker/: test_read_csv.py
tests/test_exercises/: test_exercise.py
(+10 files in other folders)
