[project]
name = "ft_app"
version = "1.0.0"
description = "Fitness tracker app"
dependencies = [
    "flask",
    "sqlalchemy",
    "bokeh",
    "WTForms",
    "pytest",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ft_app"]